#JC-1827 - Fixed tooltip for language selector Maximum width of the tooltip set to 61px, enabled word-wrap mechanism so even one word is longer then max width - it will be wrapped to the next line

--- a/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
+++ b/jcommune-view/jcommune-web-view/src/main/webapp/resources/css/app/application.css
@@ -1063,3 +1063,8 @@ pre.prettyprint {
         display: none;
     }
 }
+
+#lang-selector-toggle-li .tooltip {
+    white-space: pre-wrap;
+    max-width: 61px;
+}
